# hoops

./: CMakeLists.txt  ChangeLog  SConscript  azure-pipelines.yml  hoopsLib.py
cmake/: hoopsConfig.cmake.in
cmt/: .cvsignore  cleanup.csh  cleanup.sh  requirements  rh72_gcc2953.make  setup.csh  setup.sh
data/: .cvsignore  file.par
doc/: Doxyfile  Doxyfile.run  release.notes
hoops/: hoops.h  hoops_ape.h  hoops_ape_factory.h  hoops_exception.h  hoops_group.h  hoops_itor.h  hoops_limits.h  hoops_numeric_limits.h  hoops_par.h  hoops_pil.h  hoops_pil_factory.h  hoops_prim.h  hoops_prompt_group.h
src/: hoops_ape.cxx  hoops_exception.cxx  hoops_group.cxx  hoops_limits.cxx  hoops_par.cxx  hoops_pil.cxx  hoops_prim.cxx  hoops_prompt_group.cxx
src/test/: hoops_lim_test.cxx  hoops_par_test.cxx  hoops_prim_test.cxx  hoops_sample.cxx  main.cxx
